# rust-axum-book-jpub

./: .gitignore  CLAUDE.md  axum-app-state.md  impl_into.md  jwt-token.md  rust-error-handling-traits.md  shuttle-setup.md
axum-proxy-server/: Cargo.toml
axum-proxy-server/src/: main.rs
axum-react-chat/: .env-example  Cargo.toml  Dockerfile-old  docker-compose.yml  how-to-docker.md  sse-usage.md
axum-react-chat/.shuttle/: config.toml
axum-react-chat/backend/: .env-example  .gitignore  Cargo.toml
axum-react-chat/backend/migration/src/: m20220101_000001_create_table.rs
axum-react-chat/backend/src/: app.rs  main.rs  main_docker.rs
axum-react-chat/backend/src/api/: chat.rs  chat_room.rs  mod.rs  state.rs  user.rs
axum-react-chat/backend/src/db/: init.rs
axum-react-chat/backend/src/entities/: chat.rs  mod.rs  prelude.rs  room.rs  users.rs
axum-react-chat/backend/static/: index.html
axum-react-chat/backend/static/assets/: index-245d84d1.js  index-d2976eb6.js
axum-react-chat/frontend/src/: Chat.jsx  Enter.jsx  Rooms.jsx
axum-react-chat/src/: main.rs
axum-react-chat/src/api/: chat.rs
axum-rest-api/src/: main.rs
axum-rest-basic/: Cargo.toml
axum-rest-basic/src/: main.rs
axum-rest-seaorm/: .env-example  Cargo.toml
axum-rest-seaorm/migration/src/: lib.rs  m20250624_091523_create_table.rs  main.rs
axum-rest-seaorm/src/: main.rs  swagger.rs
axum-rest-seaorm/src/api/: auth.rs  category.rs  mod.rs  product.rs  text.rs  users.rs
axum-rest-seaorm/src/db/: init.rs  mod.rs
axum-rest-seaorm/src/entities/: category.rs  mod.rs  prelude.rs  product.rs  users.rs
axum-rest-seaorm/src/utils/: app_error.rs  hash.rs  jwt.rs  mod.rs
axum-websocket/: Cargo.toml
axum-websocket/src/: main.rs
