# [workspace]
# # resolver = "2"
# members = ["."]

[package]
name = "axum-react-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = { version = "0.55.0", features = ["axum"] }
shuttle-runtime = { version ="0.55.0", default-features = false }
shuttle-shared-db = { version = "*", features = ["postgres", "sqlx"] }
axum = { version = "0.8.1", features = ["json", "macros"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
futures-util = "0.3.30"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sea-orm = { version = "1.1.2", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
sqlx = "0.8.2"
# migration = { path = "migration" }
serde_json = "1.0.108"
serde = "1.0.193"
dotenvy = "0.15.7"
chrono = "0.4.38"

# axum = "0.8.1"
# shuttle-axum = "0.55.0"
# shuttle-runtime = "0.55.0"
# tokio = "1.28.2"

