[package]
name = "axum-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.4", features = ["json", "multipart"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.108"
# log = "0.4.24"
# env_logger = "0.11.6"
# thiserror = "2.0.10"
# chrono = "0.4.30"
# uuid = "1.13.0"