[package]
name = "axum-rest-seaorm"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.3", features = ["json", "macros"] }
sea-orm = { version = "1.1.2", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
serde_json = "1.0.108"
serde = "1.0.193"
dotenvy = "0.15.7"