[package]
name = "axum-rest-seaorm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.1", features = ["full"] }
axum = { version = "0.7.9", features = ["json", "macros"] }
sea-orm = { version = "1.1.2", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
serde_json = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "openapi_extensions", "time"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }