[package]
name = "axum-rest-seaorm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.1", features = ["full"] }
axum = { version = "0.7.9", features = ["json", "macros"] }
tower-http = { version = "0.5.0", features = ["compression-gzip", "timeout", "trace"] }
tower = { version = "0.4.13", features = ["full"] }
sea-orm = { version = "1.1.2", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
serde_json = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
lazy_static = "1.4.0"
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "openapi_extensions", "time"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }